change data stucture
Change Transaction:
List -> Map (key: itemset; value: probability)